Add model validation
Signed-off-by: Simon Graband <sgraband@eclipsesource.com>

--- a/web/coffee-workflow-glsp-editor/package.json
+++ b/web/coffee-workflow-glsp-editor/package.json
@@ -25,7 +25,8 @@
     "@theia/monaco": "latest",
     "@theia/workspace": "latest",
     "@types/node": "latest",
-    "coffee-workflow-sprotty": "0.7.0"
+    "coffee-workflow-sprotty": "0.7.0",
+    "balloon-css": "^0.5.0"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
